# PeaRL

./: .claudeignore  .dockerignore  .editorconfig  .env.example  .gitignore  .pearl.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE-security-hardening.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SPEC-DARK-FACTORY.md  SPEC.md  alembic.ini  decisions.md  docker-compose.yaml  launch-worktrees.sh  local_network.md  pyproject.toml  sonar-project.properties  sprint-progress.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  pearl-gate.yml  release.yml
PeaRL_spec/: README.md
PeaRL_spec/.sample-project/: README.md
PeaRL_spec/docs/: contract-conventions.md  implementation-notes.md
PeaRL_spec/examples/: EXAMPLES-INDEX.md
PeaRL_spec/openapi/: pearl-api-v1.1.yaml
PeaRL_spec/schemas/: SCHEMA-INDEX.md
PeaRL_spec/tools/: validate_examples.py
deploy/: docker-compose.prod.yaml
deploy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml
deploy/nginx/: pearl.conf
deploy/postgres/: init-databases.sh
docs/: agent-lifecycle.md  agent-team-workflows.md  architecture.md  dark-factory-governance.md  mcp-tools.md
docs/admin/: integrations.md
docs/adr/: 001-externalize-trust-adjudication-to-mass.md
docs/integrations/: litellm-mcp-adapter.md  mcp-integration.md  notification-adapters.md  sonarqube.md
docs/security_research/: SECURITY_HARDENING.md  anomaly_patterns.md  audit_trail_gaps.md  autonomous_agent_attack_chain.drawio  context_receipt_enforcement_design.md  context_receipt_gap.md  control_classification.md  gap_analysis_v2.md  governance_hardening_plan_v2.md  pearl_autonomous_attack_research.md
docs/using-pearl/: api.md
e2e/: package-lock.json  playwright.config.ts
e2e/tests/: full-workflow.spec.ts  gate-flow.spec.ts
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: pearl_bash_guard.py  pearl_context_drift_check.py  pearl_hook_check.py  pearl_mass_scan_hook.sh  register_adios.py  seed_costs.py  seed_demo_projects.py  seed_pearl_gate.py  seed_promotion_pipeline.py  set_environments.py  simulate_approval_workflow.py  simulate_elevations.py  simulate_findings.py  simulate_gate_stages.py
src/pearl/: __init__.py  __main__.py  config.py  dependencies.py  logging_config.py  main.py  server_cli.py
src/pearl_dev/: __init__.py  __main__.py  api_client.py  approval_terminal.py  audit.py  cli.py  config.py  context_loader.py  mcp_server.py  mcp_tool_defs.py  pearl_folder_guard.py  policy_engine.py  task_packet_local.py  template_renderer.py  unified_mcp.py
tests/: conftest.py  test_agent_brief.py  test_agent_governance.py  test_agentcore_routes.py  test_aiuc_gate_integration.py  test_allowance_profiles.py  test_audit_trail.py  test_auto_elevation.py  test_behavioral_drift.py  test_benderbox_scan.py  test_business_unit.py  test_cedar_export_worker.py  test_cedar_generator.py  test_ci_snippet.py  test_claude_md_injection.py  test_cloudwatch_analysis.py  test_combined_promotion_flow.py  test_common_models.py  test_contract_compliance.py  test_contract_snapshot.py  test_dashboard_backend.py  test_entity_models.py  test_fairness_models.py  test_fairness_routes.py  test_full_flow.py  test_gate_evaluator_v2.py  test_gate_reeval_behavior.py  test_gate_verdict.py  test_governance_container.py  test_guardrails_scanner.py  test_health.py  test_integrations_foundation.py  test_lifespan_no_alter_table.py  test_litellm_client.py  test_log_injection.py  test_mass_enrichment.py  test_mcp.py  test_mcp_http.py  test_notification_adapters.py  test_pearl_dev.py  (+22 more)
tests/contract/: test_approval_contract.py  test_audit_trail.py  test_compile_contract.py  (+6 more)
(+406 files in other folders)
