[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pearl"
version = "1.1.0"
description = "PeaRL - Policy-enforced Autonomous Risk Layer"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis[hiredis]>=5.2.0",
    "aioboto3>=13.0.0",
    "jsonschema>=4.23.0",
    "PyJWT[crypto]>=2.9.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "aiosqlite>=0.20.0",
    "claude-agent-sdk>=0.1.0",
    "structlog>=24.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "slowapi>=0.1.9",
    "email-validator>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "jinja2>=3.1.0",
    "openapi-spec-validator>=0.7.0",
    "schemathesis>=3.38.0",
]

[project.scripts]
pearl-dev = "pearl_dev.cli:main"
pearl-server = "pearl.server_cli:main"
pearl-mcp = "pearl_dev.unified_mcp:main"
pearl-agent = "pearl_dev.agent.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/pearl", "src/pearl_dev"]
